--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,28 @@
     font-family: 'IBM Plex Mono', monospace;
 }
 
+.preloader {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+        width: 100px;
+        height: 100px;
+    }
+}
+
+.error-block {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: 700;
+}
+
 .app-wrapper {
     display: flex;
     flex-wrap: wrap;
